# Django-React-Tutorial

./: .gitignore  pyproject.toml
backend/: db.sqlite3
backend/api/: models.py  serializers.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  ProtectedRoute.jsx
frontend/src/pages/: Register.jsx
