[project]
name = "django-react-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgiref",
    "Django",
    "django-cors-headers",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "PyJWT",
    "pytz",
    "sqlparse",
    "psycopg2-binary",
    "python-dotenv"
    ]
